--- a/src/app/components/sidemenu/sidemenu.component.html
+++ b/src/app/components/sidemenu/sidemenu.component.html
@@ -5,7 +5,7 @@
         <span class="hamburger-inner"></span>
       </span>
     </button>
-    <div class="logo"></div>
+    <!-- <div class="logo"></div> -->
   </div>
   <div class="menus-wrapper">
     <div class="category-nav" *ngIf="isGalleryMenuVisible">
