--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -73,6 +73,7 @@ main.main-container {
   text-align: right;
   color: #fff;
   padding-top: 5px;
-  padding-right: 120px;
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  width: 100%;
+  text-align: center;
 }
