--- a/src/app/gallery/thumbs/gallery.component.scss
+++ b/src/app/gallery/thumbs/gallery.component.scss
@@ -28,6 +28,8 @@ $spinner-size: 60px;
       background-color: rgba(255, 255, 255, .45);
       -webkit-backdrop-filter:saturate(120%) blur(30px);
       backdrop-filter: saturate(120%) blur(30px);
+      text-align: left;
+      line-height: 15px;
 
       .content {
         padding: 8px 12px;
@@ -43,6 +45,18 @@ $spinner-size: 60px;
         }
         a {
           color: #4B3F72;
+        }
+
+        .image-link,
+        .text-wrap {
+          display: flex;
+          align-items: center;
+          .icon {
+            font-size: 32px;
+          }
+          span, .text {
+            padding: 8px 16px;
+          }
         }
       }
     }
@@ -96,6 +110,20 @@ $spinner-size: 60px;
   .mobile {
     display: none;
   }
+}
+
+.copyright-mobile {
+  font-size: 13px;
+  color: #FFF;
+  width: 100%;
+  height: 19px;
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
 }
 
 section.gallery {
