Fixed copyright text

--- a/src/app/gallery/thumbs/gallery.component.html
+++ b/src/app/gallery/thumbs/gallery.component.html
@@ -22,7 +22,7 @@
 </div>
 <div class="mobile" >
   <div class="copyright-mobile">
-    Copyright &copy; 2021 - {{currentMobilePage}}/{{(allImages$ | async)?.length}}
+    Copyright &copy; 2021 - Sergio Righini - {{currentMobilePage}}/{{(allImages$ | async)?.length}}
     <!-- Copyright &copy; {{currentYear}} - {{currentPage}}/{{totalPages | async}} -->
   </div>
   <carousel [isAnimated]="false" appCarouselSwipe [startFromIndex]="0" [interval]="0" (activeSlideChange)="activeSlideChanged($event)">
