--- a/src/app/about-me/page/page.component.html
+++ b/src/app/about-me/page/page.component.html
@@ -1,7 +1,7 @@
 <section class="about-me" *ngIf="content$ | async as content" [style.background-image]="'url(http://sergiorighini.com/2016/img/aboutme/' + content.arquivo + ')'">
-  <h1 class="about-me__title">About me</h1>
-  <div class="content">
-    <div [innerHTML]="content.about_pt"></div>
-    <div [innerHTML]="content.about_pt"></div>
+  <div class="content-wrapper">
+    <ng-scrollbar class="content">
+      <div [innerHTML]="content.about_pt"></div>
+    </ng-scrollbar>
   </div>
 </section>
