--- a/src/app/components/copyright/copyright.component.html
+++ b/src/app/components/copyright/copyright.component.html
@@ -1,1 +1,1 @@
-<span class="copyright">Copyright &copy; {{currentYear}} - Sergio Righini - {{currentPage}}/{{totalPages | async}}</span>
+<span class="copyright">Copyright &copy; {{currentYear}} - Sergio Righini - {{currentPage}}/{{totalPages}}</span>
