--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,10 +63,18 @@ body {
 }
 
 .icon-info:before {
-  content: "\ea0c"
+  content: "\e903";
 }
 
 .icon-link:before {
-  content: "\ea7e"
+  content: "\e904";
+}
+
+.icon-right:before {
+  content: "\e905";
+}
+
+.icon-left:before {
+  content: "\e906";
 }
 
