--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -36,10 +36,10 @@ main.main-container {
     max-height: 100vh;
   }
 
-  @include media(">=desktop") {
-    background: rgb(0,0,0);
-    background: linear-gradient(90deg, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 100%);
-  }
+  // @include media(">=desktop") {
+  //   background: rgb(0,0,0);
+  //   background: linear-gradient(90deg, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 100%);
+  // }
 
 }
 
