--- a/src/app/components/sidemenu/sidemenu.component.scss
+++ b/src/app/components/sidemenu/sidemenu.component.scss
@@ -33,7 +33,13 @@ $hamburger-types: (
   display: flex;
   height: 100vh;
   flex-direction: column;
-  width: 300px;
+  width: 310px;
+
+  ::ng-deep {
+    .panel-title .btn{
+      font-size: 20px;
+    }
+  }
 
   .hamburger {
     margin-top: 20px;
@@ -127,7 +133,7 @@ $hamburger-types: (
         .c-children a{
           font-family: 'Arial';
           text-transform: uppercase;
-          font-size: 12px;
+          font-size: 18px;
           line-height: 0;
           margin-bottom: -10px;
           &:last-child(0){
@@ -147,7 +153,7 @@ $hamburger-types: (
       text-transform: uppercase;
       text-decoration: none;
       line-height: 0px;
-      font-size: 13px;
+      font-size: 15px;
       color: #FFF;
       padding-left: 16px;
       &:hover,
@@ -169,16 +175,22 @@ $hamburger-types: (
         }
 
         i {
-          font-size: 16px;
+          font-size: 18px;
         }
         span {
           padding-left: 8px;
           text-transform: lowercase;
+          font-size: 16px;
         }
       }
       @include media(">=phone", "<desktop") {
         display: none;
       }
+    }
+
+    @include media(">=phone", "<desktop") {
+      margin-top: auto;
+      bottom: 100px;
     }
 	}
 	.panel-group .panel-heading + .panel-collapse > .panel-body,
@@ -190,7 +202,7 @@ $hamburger-types: (
 			font-family: 'Arial';
 			text-transform: uppercase;
 			line-height: 13px;
-			font-size: 12px;
+			font-size: 14px;
 			&:hover,
 			&:focus {
 				background-color: transparent !important;
@@ -202,7 +214,7 @@ $hamburger-types: (
 		.c-children a{
 			font-family: 'Arial';
 			text-transform: uppercase;
-			font-size: 12px;
+			font-size: 14px;
 			line-height: 0;
 			margin-bottom: -10px;
 			&:last-child(0){
@@ -217,8 +229,8 @@ $hamburger-types: (
     top: 0;
     width: 100%;
     background-color: rgba(0, 0, 0, .35);
-    -webkit-backdrop-filter:saturate(180%) blur(20px);
-    backdrop-filter: saturate(180%) blur(20px);
+    -webkit-backdrop-filter:saturate(180%) blur(8.5px);
+    backdrop-filter: saturate(180%) blur(8.5px);
 
     &.open {
       height: 100vh;
