--- a/src/app/gallery/view/view.component.html
+++ b/src/app/gallery/view/view.component.html
@@ -1,25 +1,21 @@
-<app-copyright [currentPage]="currentPage" [totalPages]="totalPages$"></app-copyright>
+<app-copyright [currentPage]="currentPage" [totalPages]="totalPages$ | async"></app-copyright>
 <section class="view" *ngIf="selectedItem$ | async as image">
   <div class="prev-item" (click)="navigateTo(image.prev)" *ngIf="image.prev">
-    <img src="assets/images/seta-esq.png" alt="">
+    <i class="icon icon-left"></i>
   </div>
   <div class="view-picture">
-    <!-- <div class="view-picture__loader" #loader>
-      <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
-    </div> -->
     <div class="paint-picture" [style.background-image]="getImageUrl(image.img_grande)"></div>
-    <!-- <img [src] [alt]="image.primeira_linha" class="paint img-responsive"> -->
     <div class="caption">
-        <span ng-if="image.primeira_linha">
-          {{image.primeira_linha}}<br>
-          {{image.segunda_linha}}<br>
-          {{image.terceira_linha}}<br>
-          {{image.quarta_linha}}<br>
-        </span>
-         <a href="{{image.link}}" target="_blank" ng-if="image.link">{{image.texto_link}}</a>
+      <span ng-if="image.primeira_linha" [ngStyle]="{'color': image.whiteText ? '#FFF' : '#000'}">
+        {{image.primeira_linha}}<br>
+        {{image.segunda_linha}}<br>
+        {{image.terceira_linha}}<br>
+        {{image.quarta_linha}}<br>
+      </span>
+      <a href="{{image.link}}" target="_blank" ng-if="image.link">{{image.texto_link}}</a>
     </div>
   </div>
   <div class="next-item" (click)="navigateTo(image.next)" *ngIf="image.next">
-    <img src="assets/images/seta-dir.png" alt="">
+    <i class="icon icon-right"></i>
   </div>
 </section>
