--- a/src/app/gallery/view/view.component.scss
+++ b/src/app/gallery/view/view.component.scss
@@ -12,59 +12,6 @@ section.view {
     position: relative;
     height: 100vh;
 
-    &__loader {
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, .75);
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: 999;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-
-      &.hidden {
-        display: none;
-      }
-
-      .lds-ring {
-        display: inline-block;
-        position: relative;
-        width: 80px;
-        height: 80px;
-      }
-      .lds-ring div {
-        box-sizing: border-box;
-        display: block;
-        position: absolute;
-        width: 64px;
-        height: 64px;
-        margin: 8px;
-        border: 8px solid #fff;
-        border-radius: 50%;
-        animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-        border-color: #fff transparent transparent transparent;
-      }
-      .lds-ring div:nth-child(1) {
-        animation-delay: -0.45s;
-      }
-      .lds-ring div:nth-child(2) {
-        animation-delay: -0.3s;
-      }
-      .lds-ring div:nth-child(3) {
-        animation-delay: -0.15s;
-      }
-      @keyframes lds-ring {
-        0% {
-          transform: rotate(0deg);
-        }
-        100% {
-          transform: rotate(360deg);
-        }
-      }
-    }
-
     .paint-picture {
       flex: 1;
       width: 100%;
@@ -84,7 +31,7 @@ section.view {
       right: 8px;
       color: #FFF;
       text-align: right;
-      font-size: 14px;
+      font-size: 16px;
     }
   }
 
@@ -92,23 +39,21 @@ section.view {
   .prev-item,
   .next-item {
     align-self: flex-end;
-    padding: 0 24px;
+    display: flex;
+    width: 60px;
+    height: 100vh;
+    align-items: flex-end;
+    justify-content: center;
     cursor: pointer;
-    margin-bottom: 90px;
+    padding-bottom: 15rem;
+
+    i {
+      color: #fff;
+      font-size: 48px;
+    }
 
     &.hidden {
       opacity: 0;
     }
-  }
-
-  .prev-item {
-    width: 20px;
-    height: 80px;
-    margin-right: 16px;
-  }
-
-  .next-item {
-    width: 22px;
-    height: 82px;
   }
 }
