--- a/src/app/gallery/thumbs/gallery.component.scss
+++ b/src/app/gallery/thumbs/gallery.component.scss
@@ -76,7 +76,7 @@ $spinner-size: 60px;
 
       .carousel-caption {
         position: absolute;
-        bottom: 0;
+        bottom: 90px;
         right: 0;
         padding: 10px;
       }
