--- a/src/app/contact/page/page.component.scss
+++ b/src/app/contact/page/page.component.scss
@@ -5,6 +5,7 @@ section.contact-me {
   height: 100vh;
   padding-top: 24px;
   padding-left: 12px;
+  font-size: 16px;
 
   @include media(">=phone", "<=tablet") {
     padding-top: 96px;
