Adjust picture position on landscape mode for mobile devices

--- a/src/app/gallery/thumbs/gallery.component.scss
+++ b/src/app/gallery/thumbs/gallery.component.scss
@@ -72,6 +72,9 @@ $spinner-size: 60px;
       background-position: top right;
       background-size: contain;
       background-repeat: no-repeat;
+      @media all and (orientation: landscape) {
+        background-position: top center;
+      }
 
       .carousel-caption {
         position: absolute;
