Adjusts on gallery

--- a/src/app/styles/_media.scss
+++ b/src/app/styles/_media.scss
@@ -10,7 +10,7 @@
 //      Simple, elegant and maintainable media queries in Sass
 //                        v1.4.9
 //
-//        https://eduardoboucas.github.io/include-media
+//        http://eduardoboucas.github.io/include-media
 //
 //         Authors: Eduardo Boucas (@eduardoboucas)
 //                  Kitty Giraudel (@kittygiraudel)
