--- a/src/app/styles/_typography.scss
+++ b/src/app/styles/_typography.scss
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
+@import url('http://fonts.googleapis.com/css2?family=Questrial&display=swap');
